[package]
name = "aga3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aga8 = "0.3.0"
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
tabled = "0.10.0"
tokio-modbus = { version = "0.6.0", features = ["sync"] }

[profile.release]
opt-level = 3
